# kings-rs

./: .gitignore  README.md  kings-rs.code-workspace
api/: Cargo.toml  README.md
api/migrations/: 20240313192854_init.down.sql  20240313192854_init.up.sql
api/src/: data.rs  entities.rs  main.rs  simulation_test.rs
api/src/common/: app_error.rs  app_state.rs
api/src/core/: game.rs  mod.rs  player.rs  user.rs
api/src/data/: card.rs  game.rs  migrations.rs  player.rs  round.rs  user.rs
api/src/entities/: card.rs  game.rs  mod.rs  player.rs  players_in_round.rs  rank.rs  role.rs  round.rs  suit.rs  swap.rs  turn.rs
api/src/migrations/: tables.rs
api/src/models/: card.rs  card_model.rs  game.rs  game_model.rs  mod.rs  opponent_model.rs  player.rs  player_model.rs  rank.rs  role.rs  round_model.rs  suit.rs  turn_model.rs  user.rs
api/src/sql/: create-tables.sql  insert_game_and_player.sql
api/src/util/: deck.rs  game_session_code.rs  mod.rs  session_code.rs  user_session.rs
api/src/web/: game.rs  game_lobby.rs  mod.rs  player.rs  user.rs
requests/: create_game.http  get_game_by_id.http  get_game_by_session.http  join_game.http  join_lobby.http  register_user.http
web/: package-lock.json  package.json  remix.config.ts  tailwind.config.ts
web/app/: root.tsx
web/app/components/: SuitIcon.tsx  playing-card.tsx
web/app/components/layout/: base.tsx
web/app/routes/: _index.tsx  card-editor.tsx
web/app/routes/card-editor/: cards.util.ts  route.tsx
web/app/routes/nesting/: route.tsx
web/app/state/: dark-mode.ts
web/app/types/: card.ts
